--- a/VivoxCore.uplugin
+++ b/VivoxCore.uplugin
@@ -10,7 +10,7 @@
 	"DocsURL": "https://docs.vivox.com/v5/general/unreal/5_19_0/en-us/Default.htm",
 	"MarketplaceURL": "",
 	"SupportURL": "https://support.vivox.com/hc/",
-	"EngineVersion": "4.27.0",
+	"EngineVersion": "5.1.0",
 	"CanContainContent": false,
 	"Installed": true,
 	"Modules": [
@@ -18,7 +18,7 @@
 			"Name": "VivoxCore",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [
+			"PlatformAllowList": [
 				"Win64"
 			]
 		}
